example/http-svc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /httpsvc
        backend:
          serviceName: http-svc
          servicePort: 80
